# HAL

./: CMakeLists.txt  Jenkinsfile  build_and_test.sh
cmake/: FindJavaScriptCore.cmake  HALConfig.cmake  HALConfig.cmake.in
examples/: ChildWidget.cpp  ChildWidget.hpp  OtherWidget.cpp  OtherWidget.hpp  Widget.cpp  Widget.hpp
include/: stdafx.h
include/HAL/: HAL.hpp  JSArray.hpp  JSClass.hpp  JSContext.hpp  JSContextGroup.hpp  JSError.hpp  JSExport.hpp  JSExportObject.hpp  JSFunction.hpp  JSObject.hpp  JSString.hpp  JSValue.hpp
include/HAL/detail/: JSBase.hpp  JSExportCallbacks.hpp  JSExportClass.hpp  JSExportClassDefinition.hpp  JSExportClassDefinitionBuilder.hpp  JSPerformanceCounter.hpp  JSUtil.hpp
src/: JSArray.cpp  JSClassDefinition.cpp  JSContext.cpp  JSContextGroup.cpp  JSError.cpp  JSExportObject.cpp  JSFunction.cpp  JSObject.cpp  JSString.cpp  JSValue.cpp
src/detail/: JSBase.cpp  JSUtil.cpp
test/: JSContextTests.cpp  JSExportTests.cpp  JSObjectTests.cpp  JSStringTests.cpp  JSValueTests.cpp
